refactor layout and pages

--- a/src/pages/Accordion/index.astro
+++ b/src/pages/Accordion/index.astro
@@ -1,6 +1,6 @@
 ---
-import { AccordionReact } from "@/components/react/AccordionReact";
 import Layout from "@/layouts/Layout.astro";
+import { AccordionReact } from "./AccordionReact";
 ---
 
 <Layout title="Accordion">
