--- a/src/pages/Button/index.astro
+++ b/src/pages/Button/index.astro
@@ -1,6 +1,6 @@
 ---
-import { ButtonsReact } from "@/components/react/ButtonsReact";
 import Layout from "@/layouts/Layout.astro";
+import { ButtonsReact } from "./ButtonsReact";
 ---
 
 <Layout title="Button">
