--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ interface Props {
 }
 
 const { title } = Astro.props;
-const currentPath = Astro.url.pathname.slice(1, -4);
+const currentPath = Astro.url.pathname.slice(1);
 const componentList = ["Accordion", "Button"];
 ---
 
@@ -29,7 +29,7 @@ const componentList = ["Accordion", "Button"];
           componentList.map((comp) => (
             <li>
               <a
-                href={`${comp}Page`}
+                href={comp}
                 class={`capitalize ${currentPath === comp ? "font-bold" : ""}`}
               >
                 {comp}
