--- a/src/pages/Accordion/index.astro
+++ b/src/pages/Accordion/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import { AccordionReact } from "./AccordionReact";
+import { AccordionReact } from "./_AccordionReact";
 ---
 
 <Layout title="Accordion">
