--- a/src/pages/Button/index.astro
+++ b/src/pages/Button/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import { ButtonsReact } from "./ButtonsReact";
+import { ButtonsReact } from "./_ButtonsReact";
 ---
 
 <Layout title="Button">
