--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,7 @@ const componentList = ["Accordion", "Button"];
           ))
         }
       </ul>
-      <div class="w-full px-8">
+      <div class="w-full">
         <slot />
       </div>
     </main>
