--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,13 @@ interface Props {
 
 const { title } = Astro.props;
 const currentPath = Astro.url.pathname.slice(1);
-const componentList = ["Accordion", "Button"];
+const componentList = [
+  "Accordion",
+  "Button",
+  "Select",
+  "AlertDialog",
+  "Dialog",
+];
 ---
 
 <!doctype html>
