--- a/src/pages/Accordion/index.astro
+++ b/src/pages/Accordion/index.astro
@@ -1,8 +1,17 @@
 ---
 import Layout from "@/layouts/Layout.astro";
+import { jsxToTxt } from "@/lib/jsxToTxt";
 import { AccordionReact } from "./_AccordionReact";
+
+const text = jsxToTxt("Accordion");
 ---
 
 <Layout title="Accordion">
-  <AccordionReact client:load />
+  <div class="flex flex-col gap-8">
+    <h3 class="text-2xl font-bold">Component</h3>
+    <AccordionReact client:load />
+
+    <h3 class="text-2xl font-bold">Code</h3>
+    <pre>{text}</pre>
+  </div>
 </Layout>
