--- a/src/pages/AlertDialog/index.astro
+++ b/src/pages/AlertDialog/index.astro
@@ -1,8 +1,17 @@
 ---
 import Layout from "@/layouts/Layout.astro";
+import { jsxToTxt } from "@/lib/jsxToTxt";
 import { AlertDialogReact } from "./_AlertDialogReact";
+
+const text = jsxToTxt("AlertDialog");
 ---
 
-<Layout title="Alert Dialog">
-  <AlertDialogReact client:load />
+<Layout title="AlertDialog">
+  <div class="flex flex-col gap-8">
+    <h3 class="text-2xl font-bold">Component</h3>
+    <AlertDialogReact client:load />
+
+    <h3 class="text-2xl font-bold">Code</h3>
+    <pre>{text}</pre>
+  </div>
 </Layout>
