--- a/src/pages/Badge/index.astro
+++ b/src/pages/Badge/index.astro
@@ -1,15 +1,15 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import { jsxToTxt } from "@/lib/jsxToTxt";
-import { SelectReact } from "./_SelectReact";
+import { BadgeReact } from "./_BadgeReact";
 
-const text = jsxToTxt("Select");
+const text = jsxToTxt("Badge");
 ---
 
-<Layout title="Select">
+<Layout title="Badge">
   <div class="flex flex-col gap-8">
     <h3 class="text-2xl font-bold">Component</h3>
-    <SelectReact client:load />
+    <BadgeReact client:load />
 
     <h3 class="text-2xl font-bold">Code</h3>
     <pre>{text}</pre>
