--- a/src/pages/Button/index.astro
+++ b/src/pages/Button/index.astro
@@ -1,8 +1,17 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import { ButtonsReact } from "./_ButtonsReact";
+import { jsxToTxt } from "@/lib/jsxToTxt";
+import { ButtonReact } from "./_ButtonReact";
+
+const text = jsxToTxt("Button");
 ---
 
 <Layout title="Button">
-  <ButtonsReact client:load />
+  <div class="flex flex-col gap-8">
+    <h3 class="text-2xl font-bold">Component</h3>
+    <ButtonReact client:load />
+
+    <h3 class="text-2xl font-bold">Code</h3>
+    <pre>{text}</pre>
+  </div>
 </Layout>
