--- a/src/pages/Dialog/index.astro
+++ b/src/pages/Dialog/index.astro
@@ -1,8 +1,17 @@
 ---
 import Layout from "@/layouts/Layout.astro";
+import { jsxToTxt } from "@/lib/jsxToTxt";
 import { DialogReact } from "./_DialogReact";
+
+const text = jsxToTxt("Dialog");
 ---
 
 <Layout title="Dialog">
-  <DialogReact client:load />
+  <div class="flex flex-col gap-8">
+    <h3 class="text-2xl font-bold">Component</h3>
+    <DialogReact client:load />
+
+    <h3 class="text-2xl font-bold">Code</h3>
+    <pre>{text}</pre>
+  </div>
 </Layout>
