--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,3 +74,15 @@
     @apply bg-background text-foreground;
   }
 }
+
+pre {
+  background-color: var(--secondary);
+  border: 1px solid #ddd;
+  padding: 10px;
+  font-family: 'Courier New', monospace;
+  font-size: 14px;
+  line-height: 1.4;
+  overflow: auto;
+  padding-top: 10px;
+  border-radius: 8px;
+}
