--- a/src/pages/Accordion/index.astro
+++ b/src/pages/Accordion/index.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import { jsxToTxt } from "@/lib/jsxToTxt";
+import { Markdown } from "@astropub/md";
 import { AccordionReact } from "./_AccordionReact";
 
-const text = jsxToTxt("Accordion");
+const text = await jsxToTxt("Accordion");
 ---
 
 <Layout title="Accordion">
@@ -12,6 +13,6 @@ const text = jsxToTxt("Accordion");
     <AccordionReact client:load />
 
     <h3 class="text-2xl font-bold">Code</h3>
-    <pre>{text}</pre>
+    <Markdown of={text} />
   </div>
 </Layout>
