--- a/src/pages/AlertDialog/index.astro
+++ b/src/pages/AlertDialog/index.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import { jsxToTxt } from "@/lib/jsxToTxt";
+import { Markdown } from "@astropub/md";
 import { AlertDialogReact } from "./_AlertDialogReact";
 
-const text = jsxToTxt("AlertDialog");
+const text = await jsxToTxt("AlertDialog");
 ---
 
 <Layout title="AlertDialog">
@@ -12,6 +13,6 @@ const text = jsxToTxt("AlertDialog");
     <AlertDialogReact client:load />
 
     <h3 class="text-2xl font-bold">Code</h3>
-    <pre>{text}</pre>
+    <Markdown of={text} />
   </div>
 </Layout>
