--- a/src/pages/Badge/index.astro
+++ b/src/pages/Badge/index.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import { jsxToTxt } from "@/lib/jsxToTxt";
+import { Markdown } from "@astropub/md";
 import { BadgeReact } from "./_BadgeReact";
 
-const text = jsxToTxt("Badge");
+const text = await jsxToTxt("Badge");
 ---
 
 <Layout title="Badge">
@@ -12,6 +13,6 @@ const text = jsxToTxt("Badge");
     <BadgeReact client:load />
 
     <h3 class="text-2xl font-bold">Code</h3>
-    <pre>{text}</pre>
+    <Markdown of={text} />
   </div>
 </Layout>
