--- a/src/pages/Button/index.astro
+++ b/src/pages/Button/index.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import { jsxToTxt } from "@/lib/jsxToTxt";
+import { Markdown } from "@astropub/md";
 import { ButtonReact } from "./_ButtonReact";
 
-const text = jsxToTxt("Button");
+const text = await jsxToTxt("Button");
 ---
 
 <Layout title="Button">
@@ -12,6 +13,6 @@ const text = jsxToTxt("Button");
     <ButtonReact client:load />
 
     <h3 class="text-2xl font-bold">Code</h3>
-    <pre>{text}</pre>
+    <Markdown of={text} />
   </div>
 </Layout>
