--- a/src/pages/Dialog/index.astro
+++ b/src/pages/Dialog/index.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import { jsxToTxt } from "@/lib/jsxToTxt";
+import { Markdown } from "@astropub/md";
 import { DialogReact } from "./_DialogReact";
 
-const text = jsxToTxt("Dialog");
+const text = await jsxToTxt("Dialog");
 ---
 
 <Layout title="Dialog">
@@ -12,6 +13,6 @@ const text = jsxToTxt("Dialog");
     <DialogReact client:load />
 
     <h3 class="text-2xl font-bold">Code</h3>
-    <pre>{text}</pre>
+    <Markdown of={text} />
   </div>
 </Layout>
