--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -76,13 +76,8 @@
 }
 
 pre {
-  background-color: var(--secondary);
-  border: 1px solid #ddd;
-  padding: 10px;
-  font-family: 'Courier New', monospace;
-  font-size: 14px;
-  line-height: 1.4;
-  overflow: auto;
-  padding-top: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   border-radius: 8px;
+  padding-right: 40px;
 }
