--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,17 @@ const componentList = [
   "AlertDialog",
   "Dialog",
   "Badge",
-];
+  "Calendar",
+  "Avatar",
+  "Card",
+  "Carousel",
+  "Checkbox",
+  "Combobox",
+  "ContextMenu",
+  "Menubar",
+  "Command",
+  "InputOTP",
+].sort((a, b) => a.localeCompare(b));
 ---
 
 <!doctype html>
